# discord_native_reddit_vids

./: .env.example  .gitignore  .nginx.conf.swp  Dockerfile  docker-compose.yml  main.py  nginx.conf  pyproject.toml
discord_native_reddit_vids/: download.py  reddit.py  settings.py  test_download.py
